--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 
   
-  "name": "react-starter-kit",
+  "name": "evaluacion-intermedia-natalia-blanco",
    "homepage": "./",
   "version": "0.1.0",
   "private": true,
